--- a/requirements.txt
+++ b/requirements.txt
@@ -8,16 +8,45 @@ click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+Deprecated==1.2.18
+googleapis-common-protos==1.67.0
 idna==3.10
+importlib_metadata==8.5.0
 kombu==5.4.2
+opentelemetry-api==1.30.0
+opentelemetry-distro==0.51b0
+opentelemetry-exporter-otlp-proto-common==1.30.0
+opentelemetry-exporter-otlp-proto-http==1.30.0
+opentelemetry-instrumentation==0.51b0
+opentelemetry-instrumentation-asgi==0.51b0
+opentelemetry-instrumentation-asyncio==0.51b0
+opentelemetry-instrumentation-celery==0.51b0
+opentelemetry-instrumentation-click==0.51b0
+opentelemetry-instrumentation-dbapi==0.51b0
+opentelemetry-instrumentation-logging==0.51b0
+opentelemetry-instrumentation-redis==0.51b0
+opentelemetry-instrumentation-requests==0.51b0
+opentelemetry-instrumentation-sqlite3==0.51b0
+opentelemetry-instrumentation-threading==0.51b0
+opentelemetry-instrumentation-urllib==0.51b0
+opentelemetry-instrumentation-urllib3==0.51b0
+opentelemetry-instrumentation-wsgi==0.51b0
+opentelemetry-proto==1.30.0
+opentelemetry-sdk==1.30.0
+opentelemetry-semantic-conventions==0.51b0
+opentelemetry-util-http==0.51b0
 packaging==24.2
 prompt_toolkit==3.0.50
+protobuf==5.29.3
 python-dateutil==2.9.0.post0
 redis==5.2.1
 requests==2.32.3
 setuptools==75.8.0
 six==1.17.0
+typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 vine==5.1.0
 wcwidth==0.2.13
+wrapt==1.17.2
+zipp==3.21.0
